4.66

- Added: New entry d_excludemag_gen in CfgVehicles.cpp to remove magazines from all planes and not plane specific
- Added: Pre-emptive event with some garrisoned guerrillas, new events server setting for "guerrilla and defense only", by longtimegamer
- Added: Project RACS and SLA support, by Schalldampfer
- Added: New param d_sm_mt_protectionAI (Side mission/main target protection from friendly AI CAS missiles and bombs (call CAS) in lobby, default off). Adds side mission and/or main target protection for player call CAS AI
- Added: When a main target is done the top 10 players scores reached during that time are now shown
- Changed: AI Advanced - enhanced awareness is now enabled by default, range 650m (param d_ai_awareness_rad, you have to change it in the database manually if you already use one)
- Changed: GBU24 bombs (FIR) are removed from pylon loadout (too overpowered)
- Changed: If the admin ends a main target enemy main target AI will be also be deleted
- Changed: Status bar now also shows if enemy vehicle MHQ is destroyed
- Fixed: Side mission protection disabled for convoy side missions
- Fixed: Side mission protection for deliver side missions is now at the delivery point and not the start point
- Fixed: Airdrop sometimes didn't drop ammo, by longtimegamer
- Fixed: Airdrop vehicle sometimes did not fly away after drop was completed, by longtimegamer
- Fixed: Additional recruit sign could fall over
- Fixed: It could happen that a player had damage when he was moved out of jail back to base
- Fixed: High numbers were shown in scientific notation in the top 10 player dialog